--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "eFootball Mod 2026",
-  "short_name": "eFootball",
+  "short_name": "eFootball Mod 2026",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
